# BOOW

./: .BuildScript 3.ps1.icloud  .gitignore  BuildScript 2.ps1  CMakeLists.txt  README.md  build.sh  build_and_run.ps1  build_and_run.sh  copyme.py  notes.txt  output.txt  q
img/: .RobotoMono-Italic-VariableFont_wght 2.ttf.icloud  .RobotoMono-Regular 2.ttf.icloud  .RobotoMono-VariableFont_wght 2.ttf.icloud  .arial 2.ttf.icloud
include/: AIController 2.h  AIController.h  Boat.h  BuildObstacles.h  Button.h  Collectable 2.h  Collectable.h  Constants.h  EventHandler.h  GameSetup.h  GameState.h  Menu.h  Obstacle.h  ObstacleManager.h  Pause.h  PhysicsManager.h  RenderGame.h  Timer.h  levels.h
src/: AIController 2.cpp  AIController.cpp  Boat.cpp  BuildObstacles.cpp  Button.cpp  Collectable.cpp  EventHandler.cpp  GameSetup.cpp  Menu.cpp  ObstacleManager.cpp  Pause.cpp  PhysicsManager.cpp  RenderGame.cpp  Timer.cpp  main.cpp
src/levels/: level_1.cpp  level_2.cpp
